0030003: Construction of pipe by two circular sections and spine curve leads to crash

Added new check for periodic path and sections